--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,41 @@
-theme: jekyll-theme-cayman
+title: Hello Smile
+author: Hello Smile
+email: wangyixuan322@gmail.com
+description: Better code, better life.
+
+# set to true to show excerpts on the homepage
+show_excerpts: true 
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+sass:
+  sass_dir: _sass
+
+permalink: /posts/:title/
+texture:
+  title: Hello Smile
+  tagline: Developer
+  date_format: "%b %-d, %Y"
+  style: blue
+  showNav: false 
+  showPicker: false
+  analytics_id: 'UA-167454999-1'
+
+  # generate social links in footer
+  social_links:
+    github:  https://github.com/hellosmile
+ 
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+#header_pages:
+# - about.md
+
+# Build settings
+# theme: texture
+
+plugins:
+  - jekyll-seo-tag
+
+# Allow build future post
+future: true
